<resources>
    <string name="app_name">VPD Money</string>
    <string name="app_logo">App logo</string>
    <string name="app_authority" translatable="false">com.angakoko.vpdmoney</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_button">Back button</string>
    <string name="users">Users</string>
    <string name="opens_page_to_add_new_user">Opens page to add new user</string>
    <string name="user_profile_image">User profile image</string>
    <string name="address">Address</string>
    <string name="suite">Suite:</string>
    <string name="city">City:</string>
    <string name="zipcode">Zipcode:</string>
    <string name="company">Company</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="company_name">Company name</string>
    <string name="catchphrase">Catchphrase</string>
    <string name="save">Save</string>
    <string name="new_user">New user</string>
    <string name="required">Required</string>
    <string name="new_user_added">New user added</string>
    <string name="open_camera">Open Camera</string>
</resources>